#LINKAPP-27#set folder and variables for handbook

--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -9,6 +9,11 @@
 @transition-ease-in: all 0.3s @ease-in;
 @transition-ease-out: all 0.3s @ease-out; //mix
 
+// 金融产品手册使用颜色变量
+@title-orange: #ed7018;
+@table-yellow: #fff9eb;
+@showAll-text: #fdc24f;
+
 .text-overflow() {
   overflow: hidden;
   text-overflow: ellipsis;
