--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -13,6 +13,8 @@
 @title-orange: #ed7018;
 @table-yellow: #fff9eb;
 @showAll-text: #fdc24f;
+@background-white: #ffffff;
+@text-black: #333333;
 
 .text-overflow() {
   overflow: hidden;
