#LINKAPP-32#change listview

--- a/src/components/common/ListView/style.less
+++ b/src/components/common/ListView/style.less
@@ -1,5 +1,6 @@
 @import "../../../css/variable.less";  
   
+.container {
   :global {
     .am-list-view-scrollview{
         padding: 30px ;
@@ -30,7 +31,6 @@
           }
         }
       }
-
     }
-
   }
+}
