#LINKAPP-33#implement table component

--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -16,6 +16,8 @@
 @background-white: #ffffff;
 @text-black: #333333;
 
+@table-header-border: #e7e7e7;
+
 .text-overflow() {
   overflow: hidden;
   text-overflow: ellipsis;
