#LINKAPP-39#CHAPTER1 2 6 and cases

--- a/src/components/handbook/content/style.less
+++ b/src/components/handbook/content/style.less
@@ -85,6 +85,7 @@
         margin: 0;
         padding-left: 35px;
         padding-right: 10px;
+        text-align:justify;
         background-color: @background-color-base;
     }
 }
