#LINKAPP-30#intergration with table/list

--- a/src/components/common/list-view/style.less
+++ b/src/components/common/list-view/style.less
@@ -8,10 +8,10 @@
       .am-list-header {
           background-color: @title-orange;
           font-size: 34px;
-          letter-spacing: -0.7px;
           text-align: left;
           padding: 16px;
           color: @background-white;
+          line-height: 1.5;
       }
       
       .list-view-section-body {
