--- a/src/components/common/table/style.less
+++ b/src/components/common/table/style.less
@@ -3,6 +3,7 @@
 .container {
     table {
         border: 1px solid @title-orange;
+        padding: 30px;
 
         tr th {
             border-right: 1px solid @table-header-border;
