#LINKAPP-30#add image support

--- a/src/components/handbook/content/style.less
+++ b/src/components/handbook/content/style.less
@@ -94,4 +94,13 @@
         background-color: red;
     }
 
+    .image {
+        text-align: center;
+        padding: 35px;
+
+        img {
+            width: 100%;
+        }
+    }
+
 }
