#LINKAPP-41#fix bugs

--- a/src/components/common/table/style.less
+++ b/src/components/common/table/style.less
@@ -4,6 +4,7 @@
     table {
         border: 1px solid @title-orange;
         margin: 30px;
+        width: 94%;
 
         tr th {
             border-right: 1px solid @table-header-border;
