--- a/src/components/handbook/content/style.less
+++ b/src/components/handbook/content/style.less
@@ -116,6 +116,12 @@
         }
     }
 
+    .tag {
+        text-align: right;
+        width: 100%;
+        background-color: #fff;
+    }
+
     :global {
         .table {
             &-col2-82 {
